--- a/app/conf/robotran_predictor_initial_config.ini
+++ b/app/conf/robotran_predictor_initial_config.ini
@@ -4,4 +4,4 @@ thread_period 5
 robot_name bigman
 
 # mbs file (robotran robot description)
-mbs_file walkman_robotran.mbs
+mbs_file /home/habra/Projects/walkman_robotran/dataR/walkman_robotran.mbs
